Initial main page

--- a/src/index.css
+++ b/src/index.css
@@ -9,10 +9,9 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.90);
-  background-color: #242424;
+  background-color: rgb(0,0,0);
 
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
